--- a/templates/data_manager/upload.html
+++ b/templates/data_manager/upload.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>GeoPackage Manager</title>
+    <title>Data Manager</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1, user-scalable=no" />  
     <link rel="shortcut icon" type="image/png" href="{{ STATIC_URL }}cartoview/img/icon.png" />
     <link rel="stylesheet" href="{% static 'data_manager/dist/GeopackageManager.css' %}?version=1.1.1">
