fix download modal

--- a/static/data_manager/src/css/view.css
+++ b/static/data_manager/src/css/view.css
@@ -1,8 +1,9 @@
-
-
 body,
 html {
-    margin: 0px;
-    height: 100%;
-    overflow: hidden;
+  margin: 0px;
+  height: 100%;
+  overflow: hidden;
+}
+.base-margin {
+  margin: 16px;
 }
